--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "backstop": "backstop"
+  },
   "devDependencies": {
+    "backstopjs": "^3.7.0",
     "browser-sync": "^2.26.3",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
@@ -12,6 +16,7 @@
     "gulp-cheerio": "^0.6.3",
     "gulp-clean-css": "^3.10.0",
     "gulp-concat": "^2.6.1",
+    "gulp-css-unit": "^1.2.2",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-notify": "^3.2.0",
@@ -28,6 +33,7 @@
     "gulp-uglify": "^3.0.1",
     "gulp-util": "^3.0.8",
     "pug-cli": "^1.0.0-alpha6",
+    "slimerjs": "^1.0.0",
     "smart-grid": "^2.1.2",
     "vinyl-ftp": "^0.6.1"
   },
