--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "backstop": "backstop"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
     "backstopjs": "^3.7.0",
     "browser-sync": "^2.26.3",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-cache": "^1.0.2",
     "gulp-cheerio": "^0.6.3",
     "gulp-clean-css": "^3.10.0",
